Listagem de topicos

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,11 @@
 spring.datasource.url=jdbc:mysql://localhost/forumhub
 spring.datasource.username=Priscilla
 spring.datasource.password=Pri230689*
+
+spring.jpa.show.sql=true
+apring.jpa.properties.hibernate.format_sql=true
+
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
+spring.flyway.baselineonmigrate=true
+spring.flyway.baselineversion=1
