--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.datasource.url=jdbc:mysql://localhost/forumhub
 spring.datasource.username=Priscilla
 spring.datasource.password=Pri230689*
 
-spring.jpa.show.sql=true
-apring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
