--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,12 @@ spring.datasource.password=Pri230689*
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
+
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
 spring.flyway.baselineonmigrate=true
 spring.flyway.baselineversion=1
+
+server.error.include-stacktrace=never
+
+
