--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost/forumhub
-spring.datasource.username=Priscilla
-spring.datasource.password=Pri230689*
+spring.datasource.url=jdbc:mysql://${DB_LOCALHOST}/${DATASOURCE_DATABASE}
+spring.datasource.username=${USERNAME}
+spring.datasource.password=${USER_PASSWORD}
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
